Changelog
=========

0.3.7+1 (UNRELEASED)
--------------------

* Implemented Document.Meta AttributeDict based options
* Renamed Meta.OMIT_NOT_PASSED_FIELDS -> Meta.OMIT_MISSED_FIELDS

0.3.7 (2015-12-11)
-----------------

* New SimpleField required attribute handling (moved to validate() method)

* Implemented documents multiple inheritance

* More wise fields descriptors setters strategy on init and on __setattr__

* Split up SimpleField validation chain into several steps to adapt it
* for better overriding in case of inheritance (cleaner ListField
* implementation)


0.3.6 (2015-12-11)
------------------

* Fixed OMIT_NOT_PASSED_FIELDS to work with defaults

* Updated SimpleField.required attribute handling;
* Implemented models inheritance, refactoring DocumentMeta class;
* Significant improvements in SimpleField.validate method - divide it into composition methods;


0.3.5 (2015-12-10)
------------------

* Fixed CharField max_length validator; fixed AttributeDict setter

* Use common SimpleField value setter for descriptors and for Document init.
* Updated CharField, forbid to store None value, store '' instead; Simplified Document init


0.3.4 (2015-12-09)
------------------

* Implemented Document.IGNORE_NONE_ON_INIT feature.
* Code clean up and minor fixes


0.3.3 (2015-11-26)
------------------------

* Allow None values for non required fields. [Maksim Ekimovskii]

* Code refactoring: moved helpers to utils.py, removed helpers.py, minor
  renamings and clean up. [Maksim Ekimovskii]


0.3.2 (2015-10-10)
------------------

* Implement ListField, make it json serialize compatible for python2/3; Fixed
  some of the bugs for default field value; Added experimental validator wrapper is_instance;
  Raise AttributeError instead of KeyError for AttributeDict; [Maksim Ekimovskii]


0.3.1 (2015-10-09)
------------------

* Initialize callable default values at document init point; Added new
  tests. [Maksim Ekimovskii]
